--- a/templates/browser.html
+++ b/templates/browser.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="canonical" href="https://purefyul.com{{ request.path }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Categories Browser</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
