--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="csrf-token" content="{{ csrf_token() }}">
-  <title>Nutrition & Allergen API - Interactive Dashboard</title>
+  <title>PureFyul | Nutrition Facts & Allergen Ingredient Analyzer + Smoothie Builder</title>
   <style>
     * {
       margin: 0;
