--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <link rel="canonical" href="https://purefyul.com{{ request.path }}">
   <link rel="icon" href="/static/favicon.ico" sizes="any">
-  <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="/static/favicon-48.png">
+  <link rel="icon" href="/favicon.ico?v=2" sizes="any">
+  <link rel="shortcut icon" href="/favicon.ico?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png?v=2">
+  <link rel="icon" type="image/png" sizes="48x48" href="/static/favicon-48.png?v=2">
+  <link rel="icon" type="image/svg+xml" href="/static/favicon.svg?v=2">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
