--- a/templates/about.html
+++ b/templates/about.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="canonical" href="https://purefyul.com{{ request.path }}">
-  <link rel="icon" href="/favicon.ico?v=2" sizes="any">
-  <link rel="shortcut icon" href="/favicon.ico?v=2">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png?v=2">
-  <link rel="icon" type="image/png" sizes="48x48" href="/static/favicon-48.png?v=2">
-  <link rel="icon" type="image/svg+xml" href="/static/favicon.svg?v=2">
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}?v=1">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.svg') }}?v=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
