--- a/templates/login.html
+++ b/templates/login.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="robots" content="noindex, nofollow">
   <link rel="canonical" href="https://purefyul.com{{ request.path }}">
-  <link rel="icon" href="/favicon.ico?v=2" sizes="any">
-  <link rel="shortcut icon" href="/favicon.ico?v=2">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png?v=2">
-  <link rel="icon" type="image/png" sizes="48x48" href="/static/favicon-48.png?v=2">
-  <link rel="icon" type="image/svg+xml" href="/static/favicon.svg?v=2">
+  <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}?v=1">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.svg') }}?v=1">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
